force-app/main/default/objects/leaseworks__Matching_Aircraft__c/leaseworks__Matching_Aircraft__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Z_Unused_OP Matching Aircraft</label>
    <nameField>
        <label>Matching Aircraft Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_OP Matching Aircraft</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>