force-app/main/default/objects/leaseworks__Matching_Aircraft__c/fields/leaseworks__Aircraft__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Z_Unused_OP Aircraft</label>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipName>Matching_Aircraft</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>