force-app/main/default/objects/leaseworks__Matching_Aircraft__c/fields/leaseworks__Aircraft_Need__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_Need__c</fullName>
    <label>Z_Unused_OP Market Intelligence</label>
    <referenceTo>leaseworks__Aircraft_Need__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Matching Aircraft</relationshipLabel>
    <relationshipName>Matching_Aircraft</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>