force-app/main/default/objects/leaseworks__Matching_Aircraft__c/fields/leaseworks__Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent__c</fullName>
    <formula>/*Aircraft__r.Lease__r.Base_Rent__c*/null</formula>
    <label>Z_Unused_OP Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>